--- a/Hello World.html
+++ b/Hello World.html
@@ -5,10 +5,10 @@
 </head>
 
 <body>
+  <h2>Spectacular Mountain</h2>
+<img src="pic_mountain.jpg" alt="Mountain View" style="width:304px;height:228px;">
 Hello World123
 <img src="log.jpg"/>
-  <a href = "url"><img src="log.jpg"/a>
-
 
 </body>
 </html>
