--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
 <body>
 
 <h2>Spectacular Mountain</h2>
-<img src="pic_mountain.jpg" alt="Mountain View" style="width:304px;height:228px;">
+<img src="pic_mountain.jpg.jpg" alt="Mountain View" style="width:304px;height:228px;">
 <img src="log.jpg" />
 </body>
 </html>
