--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
 <body>
 
 <h2>Spectacular Mountain</h2>
-  <img src="two.png">
+  <img src="img/two.png">
   <img src="three.png.png">
 <img src="img/mountain.jpg" alt="Mountain View" style="width:304px;height:228px;">
 <img src="log.jpg" />
