--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
 <h2>Spectacular Mountain</h2>
   <img src="img/two.png">
   <img src="three.png.png">
-<img src="img/mountain.jpg" alt="Mountain View" style="width:304px;height:228px;">
+<img src="..img/mountain.jpg" alt="Mountain View" style="width:304px;height:228px;">
 <img src="log.jpg" />
 </body>
 </html>
