--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,7 @@
   <img src="img/two.png">
   <img src="three.png.png">
 <img src="https://github.com/Assistans912/new/blob/master/picmountain.jpg" alt="Mountain View" class="inline">
-  <img src="pic_mountain.jpg" alt="Mountain View" style="width:304px;height:228px;">
+  <img src="picmountain.jpg" alt="Mountain View" style="width:304px;height:228px;">
 <img src="log.jpg" />
 
 </body>
