--- a/hello.html
+++ b/hello.html
@@ -5,8 +5,8 @@
 <body>
 
 <h2>Spectacular Mountain</h2>
-  <img src="img/two.png">
-  <img src="three.png.png">
+  <img src="img/picmountain.jpg">
+  <img src="three.png">
 <img src="https://github.com/Assistans912/new/blob/master/picmountain.jpg" alt="Mountain View" class="inline">
   <img src="picmountain.jpg" alt="Mountain View" style="width:304px;height:228px;">
 <img src="log.jpg" />
