--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
 
 <h2>Spectacular Mountain</h2>
   <img src="img/picmountain.jpg">
-  <img src="three.png">
+  <img src="parrot.jpg">
 <img src="https://github.com/Assistans912/new/blob/master/picmountain.jpg" alt="Mountain View" class="inline">
   <img src="picmountain.jpg" alt="Mountain View" style="width:304px;height:228px;">
 <img src="log.jpg" />
